--- a/views/index.haml
+++ b/views/index.haml
@@ -27,7 +27,7 @@
     -# %link{ :href => "/apple-touch-icon.png", :rel => "apple-touch-icon" }/
 
     -# CSS: implied media="all"
-    %link{ :href => "css/style.css?v=1", :media => "all", :rel => "stylesheet" }/
+    %link{ :href => "css/style.css", :media => "all", :rel => "stylesheet" }/
 
     -# Uncomment if you are specifically targeting less enabled mobile browsers
     -# %link{ :href => "css/handheld.css?v=1", :media => "handheld", :rel => "stylesheet" }/
@@ -104,14 +104,6 @@
     %script{ :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" }
     :javascript
       !window.jQuery && document.write(unescape('%3Cscript src="js/jquery.min.js"%3E%3C/script%3E'))
-
-    %script{ :src => "js/plugins.js?v=1" }
-    %script{ :src => "js/script.js?v=1" }
-
-    /[if lt IE 7 ]
-      %script{ :src => "js/dd_belatedpng.js" }
-      :javascript
-        //DD_belatedPNG.fix('img, .png_bg');
 
     -#  asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
     -#  change the UA-XXXXX-X to be your site's ID
