Content and a placeholder design

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ pre {
 
 textarea { overflow: auto; } /* www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */
 
-.ie6 legend, .ie7 legend { margin-left: -7px; } 
+.ie6 legend, .ie7 legend { margin-left: -7px; }
 
 /* Align checkboxes, radios, text inputs with their label by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
 input[type="radio"] { vertical-align: text-bottom; }
@@ -131,10 +131,10 @@ input:invalid, textarea:invalid {
    No text-shadow: twitter.com/miketaylr/status/12228805301
    Also: hot pink! */
 ::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
-::selection { background:#FF5E99; color:#fff; text-shadow: none; }
+::selection { background:#a9014b; color:#fff; text-shadow: none; }
 
 /* j.mp/webkit-tap-highlight-color */
-a:link { -webkit-tap-highlight-color: #FF5E99; }
+a:link { -webkit-tap-highlight-color: #a9014b; }
 
 /* Make buttons play nice in IE:
    www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
@@ -152,35 +152,200 @@ body, select, input, textarea {
   /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
   color: #444;
   /* Set your base font here, to apply evenly */
-  /* font-family: Georgia, serif;  */
+  font-family: sans-serif;
 }
 
 /* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
 h1, h2, h3, h4, h5, h6 { font-weight: bold; }
 
-a, a:active, a:visited { color: #607890; }
-a:hover { color: #036; }
+a, a:active, a:visited { color: #a9014b; }
+a:hover { color: #630030; }
 
 
 /**
  * Primary styles
  *
- * Author: 
+ * Author:
  */
 
 
+html {
+  background: #f8ebcb url('../images/noise.png') repeat;
+}
+#outer-container {
+  position: relative;
+  margin: 0 auto;
+  width: 832px;
+}
+.snap {
+  position: absolute;
+  z-index: 99;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  border: 15px solid #fff;
+}
+.snap.rotate35{
+  -webkit-transform: rotate(-35deg);
+     -moz-transform: rotate(35deg);  /* FF3.5+ */
+       -o-transform: rotate(35deg);  /* Opera 10.5 */
+  -webkit-transform: rotate(35deg);  /* Saf3.1+, Chrome */
+      -ms-transform: rotate(35deg);  /* IE9 */
+          transform: rotate(35deg);
+             filter: progid:DXImageTransform.Microsoft.Matrix(/* IE6–IE9 */
+                     M11=0.8191520442889918, M12=-0.573576436351046, M21=0.573576436351046, M22=0.8191520442889918, sizingMethod='auto expand');
+               zoom: 1;
+
+}
+.snap.rotate65 {
+     -moz-transform: rotate(65deg);  /* FF3.5+ */
+       -o-transform: rotate(65deg);  /* Opera 10.5 */
+  -webkit-transform: rotate(65deg);  /* Saf3.1+, Chrome */
+      -ms-transform: rotate(65deg);  /* IE9 */
+          transform: rotate(65deg);
+             filter: progid:DXImageTransform.Microsoft.Matrix(/* IE6–IE9 */
+                     M11=0.42261826174069944, M12=-0.9063077870366499, M21=0.9063077870366499, M22=0.42261826174069944, sizingMethod='auto expand');
+               zoom: 1;
+}
+.snap.rotate45{
+     -moz-transform: rotate(45deg);  /* FF3.5+ */
+       -o-transform: rotate(45deg);  /* Opera 10.5 */
+  -webkit-transform: rotate(45deg);  /* Saf3.1+, Chrome */
+      -ms-transform: rotate(45deg);  /* IE9 */
+          transform: rotate(45deg);
+             filter: progid:DXImageTransform.Microsoft.Matrix(/* IE6–IE9 */
+                     M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476, sizingMethod='auto expand');
+               zoom: 1;
+}
+.snap.rotateMinus35 {
+     -moz-transform: rotate(-35deg);  /* FF3.5+ */
+       -o-transform: rotate(-35deg);  /* Opera 10.5 */
+  -webkit-transform: rotate(-35deg);  /* Saf3.1+, Chrome */
+      -ms-transform: rotate(-35deg);  /* IE9 */
+          transform: rotate(-35deg);
+             filter: progid:DXImageTransform.Microsoft.Matrix(/* IE6–IE9 */
+                     M11=0.8191520442889918, M12=0.573576436351046, M21=-0.573576436351046, M22=0.8191520442889918, sizingMethod='auto expand');
+               zoom: 1;
+}
+#snap1 {
+  left: -150px;
+}
+#snap2 {
+  right: -100px;
+}
+#snap3 {
+  left: -150px;
+  top: 350px;
+}
+#snap4 {
+  top: 400px;
+  right: -150px;
+}
+#snap5 {
+  left: -100px;
+  top: 700px;
+}
+#snap6 {
+  top: 800px;
+  right: -100px;
+}
+#container {
+  position: relative;
+  width: 632px;
+  margin: 0 auto;
+  font-size: 16px;
+  padding: 12px 24px 24px 24px;
+  line-height: 1.5;
+  background-color: rgba(255,255,255,1);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  z-index: 100;
+}
+#siteheader h1 {
+  font-size: 48px;
+  letter-spacing: -1px;
+  text-transform: none;
+  margin-bottom: 24px;
+}
+header {
+  margin-top: 24px;
+}
+section {
+  position: relative;
+  margin-bottom: 24px;
+}
+p {
+  margin-bottom: 24px;
+}
+
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 0;
+  font-size: 13px;
+  line-height: 24px;
+}
+table {
+  margin-top: 24px;
+  border-top: 1px solid #ccc;
+}
+td {
+  padding: 12px 24px 12px 0;
+  text-align: left;
+  border-bottom: 1px solid #ccc;
+}
+table td.action {
+  padding-right: 0px;
+  text-align: right;
+}
+table strong {
+  display: block;
+}
+table span {
+  white-space: nowrap;
+}
+
+section aside {
+  font-size: 12px;
+  color: #777px;
+  font-style: italic;
+  padding-right: 72px;
+}
 
 
 
+.awesome, .awesome:visited {
+  background: #a9014b;
+  display: inline-block;
+  padding: 5px 10px 5px;
+  color: #fff;
+  font-size: 14px;
+  text-decoration: none;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+  border-bottom: 1px solid rgba(0,0,0,0.25);
+  position: relative;
+  cursor: pointer;
+  line-height; 1;
+  font-weight: bold;
+  width: 65px;
+  text-align: center;
+}
+  .awesome:hover              { background-color: #630030; color: #fff; }
+  .awesome:active             { top: 1px; }
 
-
-
-
-
-
-
-
-
+a.awesome {
+  color: #fff;
+}
+.awesome.soldout {
+  background-color: #999;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  border-bottom: 0;
+  font-weight: normal;
+}
 
 
 /**
