--- a/views/index.haml
+++ b/views/index.haml
@@ -36,67 +36,70 @@
     %script{ :src => "js/modernizr.min.js" }
 
   %body{ :lang => "en" }
-    #container
-      %header
-        %hgruop
-          %h3 Laura Friezer presents
-          %h1 Paris Picture School
-          %h2 Learn how to take better photos in Paris
-      %section#intro
-        %p Have fun discovering the magic of light &amp; composition in the city of light.
-        %p Photograph the ancient palaces, beautiful gardens &amp; hidden laneways of Paris guided by a professional photographer [link to www.laurafriezer.com] who will unveil the simple rules to taking great photographs in all conditions with either a simple pocket digital or a DSLR camera.
-        %p Includes a 3 course lunch in an intimate Parisian restaurant
-      %section#courselist
-        %section.course
+    #outer-container
+      %img.snap.rotate35#snap1{:src => 'images/venus.png'}
+      %img.snap.rotateMinus35#snap2{:src => 'images/arc.png'}
+      %img.snap.rotate45#snap3{:src => 'images/louvre.png'}
+      %img.snap.rotate35#snap4{:src => 'images/tower.png'}
+      %img.snap.rotate35#snap5{:src => 'images/tower1.png'}
+      %img.snap.rotate35#snap6{:src => 'images/wings.png'}
+      #container
+        %header#siteheader
+          %hgroup
+            %h1 Paris Picture School
+            %h2 Learn how to take better photos in Paris
+        %section#intro
+          %p Have fun discovering the magic of light &amp; composition in the city of light.
+          %p Photograph the ancient palaces, beautiful gardens &amp; hidden laneways of Paris guided by <a href="www.laurafriezer.com">Laura Friezer</a>, a professional photographer who will unveil the simple rules to taking great photographs in all conditions with either a simple pocket digital or a DSLR camera.
+          %p Includes a 3 course lunch in an intimate Parisian restaurant.
+        %section#courselist
           %header
-            %h1 Paris in your Pocket Tour
-          :markdown
-            Starting at the Palais Royal near the Louvre Museum in the 1st arrondissement, you will wind your way slowly through to the famous Louvre Pyramid strolling through to the Tuilleries garden. Take your time to enjoy Paris in all its splendour before sitting down with your guide and fellow students in an intimate Parisian restaurant to review and discuss your photos over a delicious 3-course lunch.
+            %h1 The course list
 
-            The best photo of the day as decided by the group &amp; guide will win a Freddo Frog [link to freddofrog.com] and will be published on the Paris in your camera facebook site.
-          %aside
-            Pocket Digital Camera, good walking shoes &amp; a smile
-            Includes Photography instruction &amp; 3 course meal
-            Maximum participants 10
-
-        %section.course
-          %header
-            %h1 Paris in Your DSLR Tour
+          %section.course
+            %header
+              %h2 Paris in your Pocket Tour
             :markdown
-              With personalised attention & your DSLR set to Manual you will be guided through the Paris streets capturing the exquisite light and architecture of Paris to create artistic, imaginative photos starting at the Palais Royal near the Louvre Museum in the 1st arrondissement. You will wind your way slowly through to the famous Louvre Pyramid strolling through to the Tuileries garden. Take your time to enjoy Paris in all its splendour before sitting down with your guide and fellow students in an intimate Parisian restaurant to discuss and critique your photos over a delicious 3-course lunch.
+              Starting at the Palais Royal near the Louvre Museum in the 1st arrondissement, you will wind your way slowly through to the famous Louvre Pyramid strolling through to the Tuilleries garden. Take your time to enjoy Paris in all its splendour before sitting down with your guide and fellow students in an intimate Parisian restaurant to review and discuss your photos over a delicious 3-course lunch.
 
-              The best photo of the day as decided by the group & guide will win a Freddo Frog [link to freddofrog.com] & be published on the Paris in your camera facebook site [link to facebook site]
+              The best photo of the day as decided by the group &amp; guide will win a <a href="http://www.freddofrog.com/">Freddo Frog</a> and will be published on the Paris in your camera facebook site.
+            %aside
+              :markdown
+                Bring your Pocket Digital Camera, good walking shoes &amp; a smile
+                Includes Photography instruction &amp; 3 course meal
+                Maximum participants 10
 
-          %aside
-            Includes instruction &amp; 3 course meal
-            Maximum participants: 6
-            Digital SLR camera body &amp; lens, basic knowledge of photography
+          %section.course
+            %header
+              %h2 Paris in Your DSLR Tour
+              :markdown
+                With personalised attention & your DSLR set to Manual you will be guided through the Paris streets capturing the exquisite light and architecture of Paris to create artistic, imaginative photos starting at the Palais Royal near the Louvre Museum in the 1st arrondissement. You will wind your way slowly through to the famous Louvre Pyramid strolling through to the Tuileries garden. Take your time to enjoy Paris in all its splendour before sitting down with your guide and fellow students in an intimate Parisian restaurant to discuss and critique your photos over a delicious 3-course lunch.
 
-      %section#upcoming
-        %header
-          %h1 Upcoming classes
-        %table
-          %thead
-            %tr
-              %th Date
-              %th Time
-              %th{ :colspan => 2 } Course
-          %tbody
+                The best photo of the day as decided by the group & guide will win a <a href="http://www.freddofrog.com/">Freddo Frog</a> &amp; be published on the Paris in your camera facebook site [link to facebook site]
+
+            %aside
+              :markdown
+                Includes instruction &amp; 3 course meal
+                Maximum participants: 6
+                Digital SLR camera body &amp; lens, basic knowledge of photography
+
+        %section#upcoming
+          %header
+            %h1 Upcoming classes
+          %table
             - @events.each do |event|
               %tr
-                %td= event[:date]
-                %td #{event[:start]}—#{event[:end]}
-                %td
-                  %p
-                    %strong= event[:name]
-                  %p= event[:location]
-                -if event[:sold_out]
-                  %td Sold Out
-                -else
-                  %td
-                    %a{:href=>event[:link]} Register
-      %footer
-        Something would go down here
+                %td.date
+                  %strong= event[:date]
+                  %span #{event[:start]}—#{event[:end]}
+                %td.course
+                  %strong= event[:name]
+                  = event[:location]
+                %td.action
+                  -if event[:sold_out]
+                    %span.soldout.medium.awesome Sold Out
+                  -else
+                    %a.awesome.magenta.medium{:href=>event[:link]} Register
 
     -#
       Javascript at the bottom for fast page loading
