--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,7 +255,7 @@ html {
   font-size: 16px;
   padding: 12px 24px 24px 24px;
   line-height: 1.5;
-  background-color: rgba(255,255,255,1);
+  background-color: #fff;
   -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
   z-index: 100;
