--- a/views/style.scss
+++ b/views/style.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /**
  * HTML5 ✰ Boilerplate
  *
@@ -311,8 +313,6 @@ section aside {
   padding-right: 72px;
 }
 
-
-
 .awesome, .awesome:visited {
   background: #a9014b;
   display: inline-block;
@@ -328,7 +328,7 @@ section aside {
   border-bottom: 1px solid rgba(0,0,0,0.25);
   position: relative;
   cursor: pointer;
-  line-height; 1;
+  line-height: 1;
   font-weight: bold;
   width: 65px;
   text-align: center;
@@ -423,4 +423,5 @@ a.awesome {
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3{ page-break-after: avoid; }
 }
+
 
