Switch to scss mixins for the rotate styles.

--- a/views/index.haml
+++ b/views/index.haml
@@ -37,12 +37,12 @@
 
   %body{ :lang => "en" }
     #outer-container
-      %img.snap.rotate35#snap1{:src => 'images/venus.png'}
-      %img.snap.rotateMinus35#snap2{:src => 'images/arc.png'}
-      %img.snap.rotate45#snap3{:src => 'images/louvre.png'}
-      %img.snap.rotate35#snap4{:src => 'images/tower.png'}
-      %img.snap.rotate35#snap5{:src => 'images/tower1.png'}
-      %img.snap.rotate35#snap6{:src => 'images/wings.png'}
+      %img.snap#snap1{:src => 'images/venus.png'}
+      %img.snap#snap2{:src => 'images/arc.png'}
+      %img.snap#snap3{:src => 'images/louvre.png'}
+      %img.snap#snap4{:src => 'images/tower.png'}
+      %img.snap#snap5{:src => 'images/tower1.png'}
+      %img.snap#snap6{:src => 'images/wings.png'}
       #container
         %header#siteheader
           %hgroup
