broken link to laurafriezer.com

--- a/views/index.haml
+++ b/views/index.haml
@@ -50,7 +50,7 @@
             %h2 Learn how to take better photos in Paris
         %section#intro
           %p Have fun discovering the magic of light &amp; composition in the city of light.
-          %p Photograph the ancient palaces, beautiful gardens &amp; hidden laneways of Paris guided by <a href="www.laurafriezer.com">Laura Friezer</a>, a professional photographer who will unveil the simple rules to taking great photographs in all conditions with either a simple pocket digital or a DSLR camera.
+          %p Photograph the ancient palaces, beautiful gardens &amp; hidden laneways of Paris guided by <a href="http://www.laurafriezer.com">Laura Friezer</a>, a professional photographer who will unveil the simple rules to taking great photographs in all conditions with either a simple pocket digital or a DSLR camera.
           %p Includes a 3 course lunch in an intimate Parisian restaurant.
         %section#courselist
           %header
