Removed extraneous classes

--- a/views/index.haml
+++ b/views/index.haml
@@ -98,9 +98,9 @@
               %td.action
                 :plain
                   {{if typeof(sold_out) != "undefined" && sold_out === false}}
-                    <a class="awesome magenta medium" href="${link}">Register</a>
+                    <a class="awesome" href="${link}">Register</a>
                   {{else}}
-                    <span class="awesome magenta medium soldout">Sold Out</span>
+                    <span class="awesome soldout">Sold Out</span>
                   {{/if}}
 
     -#
