--- a/views/index.haml
+++ b/views/index.haml
@@ -50,8 +50,12 @@
             %h2 Learn how to take better photos in Paris
         %section#intro
           %p Have fun discovering the magic of light &amp; composition in the city of light.
-          %p Photograph the ancient palaces, beautiful gardens &amp; hidden laneways of Paris guided by <a href="http://www.laurafriezer.com">Laura Friezer</a>, a professional photographer who will unveil the simple rules to taking great photographs in all conditions with either a simple pocket digital or a DSLR camera.
-          %p Includes a 3 course lunch in an intimate Parisian restaurant.
+          %p With each tour having a different movie theme and a actor supplied playing the main part, you will photograph the ancient palaces &amp; buildings, beautiful gardens &amp; hidden laneways of Paris as seen in the movies.
+          %p The small group (maximum 4 students) guarantees the individual attention that will transform the way you use your camera and enable you to simply take better photos.
+          %p Wind your way through the famous quartiers of Paris with a local French actor/model whilst being shown all the secrets to taking great pictures by professional photographer <a href="http://laurafriezer.com/">Laura Friezer</a> who has photographed everyone from Bill Clinton to Morgan Freeman and everyone in between.
+          %p Take your time to enjoy Paris in all its splendour before sitting down with your guides and fellow students in a Parisian restaurant to relax, review and discuss your photos over a classic French lunch.
+          %p The best pictures of the day will be published on our <a href="http://www.facebook.com/pages/Paris-Picture-School/122633637814287">Facebook page</a>.
+
         %section#courselist
           %header
             %h1 The course list
