Degrade somewhat gracefully for non-js browsers.

--- a/views/index.haml
+++ b/views/index.haml
@@ -111,6 +111,7 @@
                   {{else}}
                     <span class="awesome soldout">Sold Out</span>
                   {{/if}}
+          .nojs It appears you don't have javascript enabled, why not turn it on and reload? Otherwise, contact <a href="http://laurafriezer.com/about">Laura</a> for event details.
 
     -#
       Javascript at the bottom for fast page loading
