--- a/views/index.haml
+++ b/views/index.haml
@@ -81,10 +81,10 @@
           %section.course
             %header
               %h2 Paris in Your DSLR Tour
-              :markdown
-                With personalised attention & your DSLR set to Manual you will be guided through the Paris streets capturing the exquisite light and architecture of Paris to create artistic, imaginative photos starting at the Palais Royal near the Louvre Museum in the 1st arrondissement. You will wind your way slowly through to the famous Louvre Pyramid strolling through to the Tuileries garden. Take your time to enjoy Paris in all its splendour before sitting down with your guide and fellow students in an intimate Parisian restaurant to discuss and critique your photos over a delicious 3-course lunch.
+            :markdown
+              With personalised attention & your DSLR set to Manual you will be guided through the Paris streets capturing the exquisite light and architecture of Paris to create artistic, imaginative photos starting at the Palais Royal near the Louvre Museum in the 1st arrondissement. You will wind your way slowly through to the famous Louvre Pyramid strolling through to the Tuileries garden. Take your time to enjoy Paris in all its splendour before sitting down with your guide and fellow students in an intimate Parisian restaurant to discuss and critique your photos over a delicious 3-course lunch.
 
-                The best photo of the day as decided by the group & guide will win a <a href="http://www.freddofrog.com/">Freddo Frog</a> &amp; be published on the Paris in your camera facebook site [link to facebook site]
+              The best photo of the day as decided by the group & guide will win a <a href="http://www.freddofrog.com/">Freddo Frog</a> &amp; be published on the Paris in your camera facebook site [link to facebook site]
 
             %aside
               :markdown
@@ -113,6 +113,41 @@
                   {{/if}}
           .nojs It appears you don't have javascript enabled, why not turn it on and reload? Otherwise, contact <a href="http://laurafriezer.com/about">Laura</a> for event details.
 
+        %section#bio
+          %header
+            %h1 Your instructor
+          %img{:src => 'images/laura-friezer.jpg', :width => '150', :height => '150', :title => "Laura Friezer"}
+          :markdown
+            Laura Friezer graduated from Sydney College of the Arts (Sydney University) with a Bachelor of Visual Arts in 1994.
+
+            She has worked as a photographer for Australian Associated Press, The Sydney Morning Herald, The Sun Herald and The Age. Her work has appeared in various publications all over the world. She has photographed many well-known figures for the media from Bill Clinton to Morgan Freeman and Marcel Marceau as well as various comissions in the corporate , fashion and advertising world. She is now based in Paris, France.
+
+        %footer
+          %ul
+            %li
+              %a{:href=>"http://www.facebook.com/pages/Paris-Picture-School/122633637814287"} Find us on Facebook
+            %li
+              :javascript
+                //<![CDATA[
+                <!--
+                var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+                "x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+                " r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!84{)rt{y+xx=l;=+;" +
+                "lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+                "\"(0)\\\\,0\\\"2:%!d8?+noPc17\\\\01\\\\03\\\\\\\\01\\\\07\\\\03\\\\\\\\20\\" +
+                "\\0n\\\\\\\\\\\\21\\\\07\\\\02\\\\\\\\07\\\\01\\\\00\\\\\\\\22\\\\06\\\\03\\"+
+                "\\\\\\1102\\\\\\\\35\\\\03\\\\03\\\\\\\\14\\\\00\\\\00\\\\\\\\HUJ5[;00\\\\0" +
+                "0\\\\01\\\\\\\\27\\\\03\\\\01\\\\\\\\25\\\\0@\\\\2}00\\\\\\\\.$/26(22\\\\0v" +
+                "\\\\;9:<3200\\\\\\\\+o9?)?0 03\\\\\\\\5g6,\\\"\\\\\\\\\\\\22\\\\0|\\\\\\\\4" +
+                "\\\\\\\\[\\\\^WIN06\\\\0U\\\\UX33\\\\0F\\\\HVYTH]^LK^hETFEP0O03\\\\\\\\TNws" +
+                "q|F9~$dr4}.r83baxhxb&~hsi`avdn\\\"\\\\f(;} ornture;}))++(y)^(iAtdeCoarchx.e" +
+                "(odrChamCro.fngriSt+=;o27=1y%){++;i<l;i=0(ior;fthnglex.l=\\\\,\\\\\\\"=\\\"" +
+                ",o iar{vy)x,f(n ioctun\\\"f)\")"                                             ;
+                while(x=eval(x));
+                //-->
+                //]]>
+            %li
+              +33 6 58 28 84 09
     -#
       Javascript at the bottom for fast page loading
       Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary
