--- a/views/style.scss
+++ b/views/style.scss
@@ -375,6 +375,9 @@ $right_image_start: 100px;
 }
 header {
   margin-top: 24px;
+  h2 {
+    margin-top: 12px;
+  }
 }
 section {
   position: relative;
@@ -400,6 +403,9 @@ table {
     text-align: left;
     border-bottom: 1px solid #ccc;
   }
+  td.date {
+    width: 150px;
+  }
   td.action {
     padding-right: 0px;
     text-align: right;
@@ -412,6 +418,13 @@ table {
   }
 }
 
+section#bio h1 {
+  margin-bottom: 12px;
+}
+section#bio img {
+  float: left;
+  margin: 0 24px 12px 0;
+}
 section aside {
   font-size: 12px;
   color: #777px;
@@ -419,6 +432,26 @@ section aside {
   padding-right: 72px;
 }
 
+footer {
+  border-top: 1px solid #ccc;
+  padding-top: 12px;
+  ul {
+    margin: 0;
+    li {
+      float: left;
+      display: inline;
+      list-style: none;
+      margin: 0 0 0 12px;
+      border-left: 1px solid #ccc;
+      padding: 0 0 0 12px;
+      &:first-child {
+        border-left: 0;
+        padding-left: 0;
+        margin-left: 0;
+      }
+    }
+  }
+}
 .awesome, .awesome:visited {
   background: #a9014b;
   display: inline-block;
